x1na: switch to device variant
Switch to a device specific variant and only include the device
trees that are for devices from this vendor and device line.

--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -224,6 +224,7 @@ dtb-$(CONFIG_ARCH_APQ8084) += apq8084-v1.0-old-pwr-grid-liquid.dtb \
 	apq8084-v1.1-old-pwr-grid-mdm9x35-alt-cdp.dtb \
 	apq8084-v1.1-mdm9x35-alt-cdp.dtb \
 	apq8084-v1.1-sbc.dtb
+ifneq ($(CONFIG_ARCH_MSM8994_X1NA),y)
 dtb-$(CONFIG_ARCH_MSM8994) += msm8994-v1-sim.dtb \
 	msm8994-rumi.dtb \
 	msm8994-v1-cdp.dtb \
@@ -259,7 +260,9 @@ dtb-$(CONFIG_ARCH_MSM8994) += msm8994-v1-sim.dtb \
 	apq8094-v2.1-mtp.dtb \
 	apq8094-v2.1-liquid.dtb \
 	apq8094-v2.1-fluid.dtb \
-	apq8094-v2.1-dragonboard.dtb \
+	apq8094-v2.1-dragonboard.dtb
+else
+dtb-$(CONFIG_ARCH_MSM8994) += \
 	cf_8_10_20000.dtb \
 	cf_8_14_20000.dtb \
 	cf_8_1_20000.dtb \
@@ -274,6 +277,7 @@ dtb-$(CONFIG_ARCH_MSM8994) += msm8994-v1-sim.dtb \
 	cf_8_2_20001.dtb \
 	cf_8_34_20001.dtb \
 	cf_8_3_20001.dtb
+endif
 
 dtb-$(CONFIG_ARCH_MSM8992) += msm8992-sim.dtb \
 	msm8992-rumi.dtb \
