--- a/arch/arm64/configs/msm8994-x1na-perf_defconfig
+++ b/arch/arm64/configs/msm8994-x1na-perf_defconfig
@@ -223,7 +223,7 @@ CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_QCOM=y
-CONFIG_SCSI_UFS_TEST=m
+CONFIG_SCSI_UFS_TEST=y
 CONFIG_SCSI_UFS_QCOM_ICE=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
@@ -250,10 +250,10 @@ CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CNSS_MAC_BUG=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_ATH_CARDS=y
-CONFIG_WIL6210=m
+CONFIG_WIL6210=y
 CONFIG_E1000E=y
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
+CONFIG_INPUT_EVBUG=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_SECURE_TOUCH=y
@@ -264,7 +264,7 @@ CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH_TS=y
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
-CONFIG_INPUT_GPIO=m
+CONFIG_INPUT_GPIO=y
 # CONFIG_SERIO_I8042 is not set
 # CONFIG_VT is not set
 CONFIG_SERIAL_MSM_HS=y
@@ -283,7 +283,7 @@ CONFIG_HAS_DMA=y
 CONFIG_QCOM_SPS_DMA=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
@@ -347,9 +347,9 @@ CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
 CONFIG_MSM_VIDC_V4L2=y
-CONFIG_DVB_MPQ=m
-CONFIG_DVB_MPQ_DEMUX=m
-CONFIG_TSPP=m
+CONFIG_DVB_MPQ=y
+CONFIG_DVB_MPQ_DEMUX=y
+CONFIG_TSPP=y
 CONFIG_RADIO_SILABS=y
 CONFIG_MSM_KGSL=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
@@ -408,8 +408,8 @@ CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_BLOCK_MINORS=32
-CONFIG_MMC_TEST=m
-CONFIG_MMC_BLOCK_TEST=m
+CONFIG_MMC_TEST=y
+CONFIG_MMC_BLOCK_TEST=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
@@ -448,7 +448,7 @@ CONFIG_PFT=y
 CONFIG_MSM_BUS_SCALING=y
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_DEBUG_BUS_VOTER=y
-CONFIG_MSM_BUSPM_DEV=m
+CONFIG_MSM_BUSPM_DEV=y
 CONFIG_QPNP_HAPTIC=y
 CONFIG_SEEMP_CORE=y
 CONFIG_MSM_MDSS_PLL=y
@@ -554,8 +554,8 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
-CONFIG_MOBICORE_SUPPORT=m
-CONFIG_MOBICORE_API=m
+CONFIG_MOBICORE_SUPPORT=y
+CONFIG_MOBICORE_API=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_DEVFREQ_SPDM=y
 CONFIG_MSM_PERFORMANCE=y
